@@ -1,6 +1,7 @@
 0.6.0
  - Fixed @CustomMeasurement not working if no configuration is provided.
  - Fixed GSON crashing ART on Marshmallow devices.
+ - Junit4 now format benchmark results a bit nicer.
 
 0.5.0
  - First "stable" release after major restructuring from Caliper.
